--- a/Xsis.Web/Xsis.Web.csproj
+++ b/Xsis.Web/Xsis.Web.csproj
@@ -166,6 +166,8 @@
     <Content Include="Views\Keluarga\_Edit.cshtml" />
     <Content Include="Views\Biodata\Index.cshtml" />
     <Content Include="Views\SelectAccess\Index.cshtml" />
+    <Content Include="Views\Biodata\_Edit.cshtml" />
+    <Content Include="Views\SelectAccess\Gagal.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
