--- a/Xsis.Web/Xsis.Web.csproj
+++ b/Xsis.Web/Xsis.Web.csproj
@@ -168,6 +168,7 @@
     <Content Include="Views\SelectAccess\Index.cshtml" />
     <Content Include="Views\Biodata\_Edit.cshtml" />
     <Content Include="Views\SelectAccess\Gagal.cshtml" />
+    <Content Include="Views\Keluarga\_Delete.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
